# gurobipy-pandas

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  bench.py  gppd-electrical.ipynb  iis.ilp  index.html  notes.rst  pdcomfi.py  pyproject.toml  rel.lp  run.py  setup.cfg  tox.ini  unit-commitment.ipynb  unit-commitment.lp  unit-commitment.py  updatecoeff-ideas.ipynb  webinar.ipynb
.github/workflows/: build-wheel.yml  code-quality.yml  doc-build.yml  examples-artifact.yml  main.yml  notebook-examples.yml  pr.yml  publish-pypi.yml  python-tests.yml  release.yml  test-examples.yml  test-wheel.yml  test-wheels.yml  test.yml  unit-tests.yml  wheel-tests.yml
2407webinar/: netflow.ipynb
docs/: Makefile  requirements-examples.txt  requirements.txt
docs/source/: acknowledgements.rst  advanced.rst  api.rst  conf.py  contact.rst  examples.rst  function-patterns.rst  howto.rst  index.rst  inspect.rst  installation.rst  license.rst  modify.rst  naming.rst  nonlinear.rst  outline.rst  performance.rst  sparsity.rst  top-level-functions.rst  typing.rst  usage.rst  walkthrough.rst
docs/source/examples/: diet.md  inventory_balance.ipynb  knapsack.md  netflow.md  networkflow.ipynb  networkflow.md  portfolio.md  projects.md  regression.md  unit-commitment.md  workforce-nb.md  workforce.md  workforce.rst
docs/source/examples/data/: diet.xlsx  generators.csv  mcfdata.v1.xlsx  preferences.csv  preferences.feather  projects.csv  teams.csv  time_periods.csv
examples/: accessors.ipynb  bench.py  extension.ipynb  regression.py  rolling.py  workforce.py  workforce_extension.py
scripts/: artifacts.py
src/gurobipy_pandas/: __init__.py  accessors.py  add_constrs.py  add_vars.py  api.py  constraints.py  extension.py  index_mappers.py  util.py  variables.py
src/pdcomfi/: __init__.py  accessors.py  extension.py
tests/: test_accessors.py  test_add_constrs.py  test_add_vars.py  test_api.py  test_constraints.py  test_docs.py  test_extension.py  test_index_mappers.py  test_operators.py  test_pdcomfi.py  test_pdextension.py  test_variables.py  utils.py
webinar/: gppd-in-90-seconds.ipynb  gppd-in-90-seconds.slides.html  project_values.csv  projects.csv  teams.csv  webinar.ipynb
webinar/2407-data-first/: mcfdata.v2.xlsx
webinar/2409-gppd-etl/: 1a-feasible-assignments.ipynb  1b-staff-required.ipynb  1c-shift-conflicts.ipynb  2-optimize.ipynb  3-postprocess.ipynb  readme.md  requirements-gurobi.txt  requirements.txt  workflow.json
webinar/2409-gppd-etl/sample_data/: staffing.db
