[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gurobipy-pandas"
description = "Pandas accessors for gurobipy interaction"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["optimization", "gurobipy", "pandas"]
authors = [
    { name = "Simon Bowly", email = "bowly@gurobi.com" },
    { name = "Robert Luce", email = "luce@gurobi.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "gurobipy",
    "pandas",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/gurobipy_pandas/__init__.py"
