[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gurobipy-pandas"
description = "Pandas accessors for gurobipy interaction"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["optimization", "gurobipy", "pandas"]
authors = [
    { name = "Simon Bowly", email = "bowly@gurobi.com" },
    { name = "Robert Luce", email = "luce@gurobi.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "gurobipy",
    "pandas",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://gurobi-optimization-gurobipy-pandas.readthedocs-hosted.com/en/beta"
Issues = "https://github.com/Gurobi/gurobipy-pandas/issues"
Source = "https://github.com/Gurobi/gurobipy-pandas"

[tool.hatch.version]
path = "src/gurobipy_pandas/__init__.py"
