[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gurobipy-pandas"
description = "Pandas accessors for gurobipy interaction"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["optimization", "gurobipy", "pandas"]
authors = [
    { name = "Simon Bowly", email = "bowly@gurobi.com" },
    { name = "Robert Luce", email = "luce@gurobi.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "gurobipy>=9.1",
    "pandas>=1.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://gurobi-optimization-gurobipy-pandas.readthedocs-hosted.com/en/latest"
Issues = "https://github.com/Gurobi/gurobipy-pandas/issues"
Source = "https://github.com/Gurobi/gurobipy-pandas"

[tool.hatch.version]
path = "src/gurobipy_pandas/__init__.py"

[tool.isort]
profile = "black"
