[metadata]
name = gurobipy-pandas
version = attr: gurobipy_pandas.__version__
description = Accessors and extensions for gurobipy/pandas interaction
long_description = file: README.md
long_description_content_type = text/markdown
author = Gurobi Optimization, LLC
platforms = any
url = https://github.com/Gurobi/gurobipy-pandas
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    gurobipy
    pandas

[options.packages.find]
where = src
